# symposium-acp

./: .gitignore  AGENTS.md  Cargo.toml  RACE_CONDITION_ANALYSIS.md  README.md  WIP.md  book.toml  commit-messages.txt  justfile  release-plz.toml  trace.txt
.claude/: settings.local.json
.github/workflows/: mdbook.yml  release-binaries.yml  rust.yml
md/: SUMMARY.md  architecture.md  building-agent.md  building-proxy.md  conductor.md  fiedler-conductor.md  introduction.md  mcp-bridge.md  pacp-components.md  protocol.md  proxying-acp.md  sacp-design.md  trace-viewer.md  transport-architecture.md  v10_to_v11_upgrade.md
skills/sacp-v2-migration/: skill.md
src/acp-proxy/: Cargo.toml
src/acp-proxy/src/: mcp_over_acp.rs  mcp_server.rs  to_from_successor.rs
src/conductor/: Cargo.toml
src/conductor/src/: component.rs  conductor.rs  lib.rs  main.rs
src/conductor/src/conductor/: mcp_bridge.rs
src/conductor/tests/: initialization_sequence.rs  mcp-integration.rs  test_util.rs
src/conductor/tests/mcp_integration/: agent.rs  proxy.rs
src/elizacp/: CHANGELOG.md  Cargo.toml
src/elizacp/src/: chat.rs  eliza.rs  lib.rs  main.rs
src/elizacp/tests/: mcp_tool_invocation.rs
src/sacp/: CHANGELOG.md  Cargo.toml  README.md
src/sacp-acp-client/: CHANGELOG.md  Cargo.toml
src/sacp-acp-client/src/: lib.rs
src/sacp-conductor/: CHANGELOG.md  Cargo.toml
src/sacp-conductor/.github/workflows/: release-plz.yml
src/sacp-conductor/src/: component.rs  conductor.rs  debug_logger.rs  http_mcp_bridge.rs  lib.rs  main.rs  mcp_bridge.rs  snoop.rs  trace.rs
src/sacp-conductor/src/conductor/: mcp_bridge.rs
src/sacp-conductor/src/conductor/mcp_bridge/: actor.rs  http.rs  mod.rs  stdio.rs
src/sacp-conductor/tests/: arrow_proxy_eliza.rs  empty_conductor_eliza.rs  initialization_sequence.rs  mcp-integration.rs  mcp_server_handler_chain.rs  nested_arrow_proxy.rs  nested_conductor.rs  scoped_mcp_server.rs  standalone_mcp_server.rs  test_mcp_tool_output_types.rs  test_session_id_in_mcp_tools.rs  test_tool_enable_disable.rs  test_tool_fn.rs  test_util.rs  trace_client_mcp_server.rs  trace_expect.rs  trace_generation.rs  trace_mcp_tool_call.rs  trace_snapshot.rs
src/sacp-conductor/tests/mcp_integration/: acp_proxy.rs  agent.rs  elizacp_agent.rs  mod.rs  proxy.rs  test_helpers.rs
src/sacp-cookbook/: CHANGELOG.md  Cargo.toml
src/sacp-cookbook/src/: lib.rs
src/sacp-derive/: CHANGELOG.md  Cargo.toml
src/sacp-derive/src/: lib.rs
src/sacp-doc-test/: CHANGELOG.md  Cargo.toml
src/sacp-doc-test/src/: lib.rs
src/sacp-proxy/: CHANGELOG.md  Cargo.toml
src/sacp-proxy/examples/: minimal.rs  simple_mcp_server.rs  with_mcp_server.rs
src/sacp-proxy/src/: component.rs  lib.rs  mcp_over_acp.rs  mcp_server.rs  mcp_server_builder.rs  mcp_server_registry.rs  to_from_successor.rs
src/sacp-proxy/src/mcp_server_builder/: tool.rs
src/sacp-proxy/tests/: mcp_handler_chain.rs
src/sacp-rmcp/: CHANGELOG.md  Cargo.toml
src/sacp-rmcp/examples/: with_mcp_server.rs
src/sacp-rmcp/src/: lib.rs
src/sacp-tee/: CHANGELOG.md  Cargo.toml
src/sacp-tee/src/: lib.rs  main.rs
src/sacp-test/: CHANGELOG.md  Cargo.toml
src/sacp-test/examples/: arrow_proxy.rs
src/sacp-test/src/: arrow_proxy.rs  lib.rs  test_binaries.rs  test_client.rs
src/sacp-tokio/: CHANGELOG.md  Cargo.toml  README.md
src/sacp-tokio/src/: acp_agent.rs  jr_connection_ext.rs  lib.rs
src/sacp-tokio/tests/: debug_logging.rs
src/sacp-trace-viewer/: CHANGELOG.md  Cargo.toml
src/sacp-trace-viewer/src/: lib.rs  main.rs  viewer.html
src/sacp/examples/: simple_agent.rs  yolo_one_shot_client.rs
src/sacp/src/: acp.rs  acp_agent.rs  capabilities.rs  component.rs  cookbook.rs  handler.rs  jsonrpc.rs  lib.rs  link.rs  mcp.rs  ordering.rs  peer.rs  role.rs  session.rs  typed.rs  util.rs
src/sacp/src/acp/: agent_to_client.rs  client_to_agent.rs  enum_impls.rs
src/sacp/src/acp/agent_to_client/: notifications.rs  requests.rs
src/sacp/src/acp/client_to_agent/: notifications.rs  requests.rs
src/sacp/src/concepts/: acp_basics.rs  callbacks.rs  connections.rs  error_handling.rs  mod.rs  ordering.rs  peers.rs  proxies.rs  sessions.rs
src/sacp/src/jsonrpc/: actors.rs  dynamic_handler.rs  handlers.rs  incoming_actor.rs  outgoing_actor.rs  reply_actor.rs  responder.rs  run.rs  task_actor.rs  transport_actor.rs
src/sacp/src/mcp_server/: active_session.rs  builder.rs  connect.rs  context.rs  mod.rs  registry.rs  responder.rs  server.rs  tool.rs
src/sacp/src/mcp_server/registry/: active_session.rs
src/sacp/src/role/: acp.rs  mcp.rs
src/sacp/src/schema/: enum_impls.rs  mod.rs  proxy_protocol.rs
src/sacp/src/schema/agent_to_client/: notifications.rs  requests.rs
src/sacp/src/schema/client_to_agent/: notifications.rs  requests.rs
src/sacp/src/util/: mod.rs  typed.rs
src/sacp/tests/: derive_macros.rs  jsonrpc_advanced.rs  jsonrpc_connection_builder.rs  jsonrpc_edge_cases.rs  jsonrpc_error_handling.rs  jsonrpc_flush.rs  jsonrpc_handler_chain.rs  jsonrpc_hello.rs  match_dispatch.rs  match_message.rs
src/scp/: Cargo.toml  README.md
src/scp/src/: capabilities.rs  jsonrpc.rs  lib.rs
src/scp/src/acp/: agent_to_client.rs  client_to_agent.rs
src/scp/src/acp/client_to_agent/: requests.rs
src/scp/src/jsonrpc/: handlers.rs
src/scp/tests/: jsonrpc_advanced.rs  jsonrpc_edge_cases.rs  jsonrpc_error_handling.rs  jsonrpc_handler_chain.rs  jsonrpc_hello.rs
src/yopo/: CHANGELOG.md  Cargo.toml
src/yopo/src/: lib.rs  main.rs
