[package]
name = "acp-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-client-protocol.workspace = true
futures = "0.3.31"
fxhash = "0.2.1"
jsonrpcmsg = "0.1.2"
rmcp.workspace = true
scp = { version = "0.1.0", path = "../scp" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util = { version = "0.7.16", features = ["compat"] }
tracing.workspace = true
uuid.workspace = true
