[package]
name = "elizacp"
version = "1.0.0-alpha.5"
edition = "2024"
description = "Classic Eliza chatbot as an ACP agent for testing"
license = "MIT OR Apache-2.0"
repository = "https://github.com/symposium-dev/symposium-acp"
keywords = ["acp", "agent", "eliza", "testing"]
categories = ["development-tools"]
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
readme = "README.md"

[[bin]]
name = "elizacp"
path = "src/main.rs"

[dependencies]
sacp = { version = "1.0.0-alpha.4", path = "../sacp" }
agent-client-protocol-schema.workspace = true
anyhow.workspace = true
clap.workspace = true
futures.workspace = true
rand = "0.9"
regex = "1.12"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
sacp-tokio = { version = "1.0.0-alpha.5", path = "../sacp-tokio" }

[dev-dependencies]
expect-test.workspace = true
