[package]
name = "elizacp"
version = "4.0.0"
edition = "2024"
description = "Classic Eliza chatbot as an ACP agent for testing"
license = "MIT OR Apache-2.0"
repository = "https://github.com/symposium-dev/symposium-acp"
keywords = ["acp", "agent", "eliza", "testing"]
categories = ["development-tools"]
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
readme = "README.md"

[[bin]]
name = "elizacp"
path = "src/main.rs"
test = false

[dependencies]
sacp = { version = "2.0.0", path = "../sacp" }
agent-client-protocol-schema.workspace = true
anyhow.workspace = true
clap.workspace = true
futures.workspace = true
rand = "0.9"
regex = "1.12"
rmcp = { workspace = true, features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
sacp-tokio = { version = "3.0.0", path = "../sacp-tokio" }

[dev-dependencies]
expect-test.workspace = true
sacp-test = { path = "../sacp-test" }
