[package]
name = "sacp-acp-client"
version = "0.1.0"
edition = "2024"
description = "ACP client utilities for SACP"
license = "MIT OR Apache-2.0"

[dependencies]
extension-trait = "1.0.2"
sacp = { version = "3.0.0", path = "../sacp" }
sacp-conductor = { version = "5.0.0", path = "../sacp-conductor" }
serde_json.workspace = true
