[package]
name = "sacp-conductor"
version = "1.0.0-alpha"
edition = "2024"
description = "Conductor for orchestrating SACP proxy chains"
license = "MIT OR Apache-2.0"
repository = "https://github.com/symposium-dev/symposium-acp"
keywords = ["acp", "agent", "conductor", "ai"]
categories = ["development-tools"]

[features]
test-support = []

[dependencies]
sacp = { version = "1.0.0-alpha", path = "../sacp" }
sacp-proxy = { version = "1.0.0-alpha", path = "../sacp-proxy" }
agent-client-protocol-schema.workspace = true
anyhow.workspace = true
clap.workspace = true
futures.workspace = true
jsonrpcmsg.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
expect-test.workspace = true
rmcp = { workspace = true, features = ["client", "server", "transport-io", "transport-child-process"] }
schemars.workspace = true
