[package]
name = "sacp-conductor"
version = "3.0.0"
edition = "2024"
description = "Conductor for orchestrating SACP proxy chains"
license = "MIT OR Apache-2.0"
repository = "https://github.com/symposium-dev/symposium-acp"
keywords = ["acp", "agent", "conductor", "ai"]
categories = ["development-tools"]

[features]
test-support = []

[dependencies]
sacp = { version = "1.1.1", path = "../sacp" }
sacp-tokio = { version = "2.0.1", path = "../sacp-tokio" }
sacp-trace-viewer = { version = "0.1.0", path = "../sacp-trace-viewer" }
agent-client-protocol-schema.workspace = true
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
futures.workspace = true
hyper.workspace = true
tower.workspace = true

serde.workspace = true
serde_json.workspace = true
shell-words = "1.1"
strip-ansi-escapes = "0.2"
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
async-stream = "0.3.6"
fxhash.workspace = true
futures-concurrency = "7.6.3"

[dev-dependencies]
elizacp = { path = "../elizacp" }
expect-test.workspace = true
rmcp = { workspace = true, features = ["client", "server", "transport-io", "transport-child-process"] }
schemars.workspace = true
sacp-test = { path = "../sacp-test" }
sacp-tokio = { path = "../sacp-tokio" }
yopo = { path = "../yopo" }
regex = "1.12.2"
