[package]
name = "sacp-cookbook"
version = "11.0.0"
edition = "2024"
description = "Cookbook of common patterns for building ACP components"
license = "MIT OR Apache-2.0"
repository = "https://github.com/symposium-dev/symposium-acp"
keywords = ["acp", "agent", "proxy", "mcp", "cookbook"]
categories = ["development-tools"]

[dependencies]
sacp = { version = "11.0.0", path = "../sacp" }
sacp-conductor = { version = "11.0.0", path = "../sacp-conductor" }
sacp-rmcp = { version = "11.0.0", path = "../sacp-rmcp" }
sacp-tokio = { version = "11.0.0", path = "../sacp-tokio" }

# Re-export common dependencies needed by cookbook examples
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
tokio.workspace = true
tracing.workspace = true
