[package]
name = "sacp-derive"
version = "10.0.0-alpha.2"
edition = "2024"
description = "Derive macros for SACP JSON-RPC traits"
license = "MIT OR Apache-2.0"
repository = "https://github.com/anthropics/acp"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
