[package]
name = "sacp-proxy"
version = "0.1.0"
edition = "2024"
description = "Framework for building SACP proxy components"
license = "MIT OR Apache-2.0"
repository = "https://github.com/agent-client-protocol/symposium-acp"
keywords = ["acp", "agent", "proxy", "ai"]
categories = ["development-tools"]

[dependencies]
agent-client-protocol.workspace = true
futures.workspace = true
fxhash.workspace = true
jsonrpcmsg.workspace = true
rmcp.workspace = true
sacp = { version = "0.1.0", path = "../sacp" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
chrono.workspace = true
schemars.workspace = true
tracing-subscriber.workspace = true
