[package]
name = "sacp-tee"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["derive"] }
sacp = { path = "../sacp" }
sacp-proxy = { path = "../sacp-proxy" }
sacp-tokio = { path = "../sacp-tokio" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
