[package]
name = "sacp-tee"
version = "0.1.2"
edition = "2024"
description = "A debugging proxy that logs all ACP traffic to a file"
license = "MIT OR Apache-2.0"
repository = "https://github.com/symposium-dev/symposium-acp"
keywords = ["acp", "agent", "debugging", "proxy", "logging"]
categories = ["development-tools", "development-tools::debugging"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["derive"] }
sacp = { version = "1.1", path = "../sacp" }
sacp-tokio = { version = "2.0", path = "../sacp-tokio" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
