[package]
name = "sacp-tee"
version = "10.0.0-alpha.4"
edition = "2024"
description = "A debugging proxy that logs all ACP traffic to a file"
license = "MIT OR Apache-2.0"
repository = "https://github.com/symposium-dev/symposium-acp"
keywords = ["acp", "agent", "debugging", "proxy", "logging"]
categories = ["development-tools", "development-tools::debugging"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["derive"] }
sacp = { version = "10.0.0-alpha.4", path = "../sacp" }
sacp-tokio = { version = "10.0.0-alpha.4", path = "../sacp-tokio" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
