[package]
name = "sacp-test"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "mcp-echo-server"
path = "src/bin/mcp_echo_server.rs"

[dependencies]
sacp = { path = "../sacp" }
yopo = { path = "../yopo" }
rmcp = { workspace = true, features = ["server"] }
schemars.workspace = true

serde.workspace = true
futures.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
