[package]
name = "sacp-test"
version = "6.0.0"
edition = "2024"
description = "Test utilities and mock implementations for SACP"
license = "MIT OR Apache-2.0"

[[bin]]
name = "mcp-echo-server"
path = "src/bin/mcp_echo_server.rs"

[dependencies]
sacp = { version = "7.0.0", path = "../sacp" }
yopo = { version = "6.0.1", path = "../yopo" }
rmcp = { workspace = true, features = ["server"] }
schemars.workspace = true

serde.workspace = true
futures.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
