[package]
name = "sacp-tokio"
version = "1.0.0-alpha.6"
edition = "2024"
description = "Tokio-based utilities for SACP (Symposium's extensions to ACP)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/symposium-dev/symposium-acp"
keywords = ["acp", "agent", "protocol", "ai", "tokio"]
categories = ["development-tools"]

[dependencies]
sacp = { version = "1.0.0-alpha.5", path = "../sacp" }
futures.workspace = true

serde.workspace = true
serde_json.workspace = true
shell-words = "1.1"
tokio.workspace = true
tokio-util.workspace = true

[dev-dependencies]
expect-test.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
