[package]
name = "sacp-trace-viewer"
version = "7.0.0"
edition = "2024"
description = "Interactive sequence diagram viewer for SACP trace files"
license = "MIT OR Apache-2.0"
repository = "https://github.com/symposium-dev/symposium-acp"
keywords = ["acp", "trace", "debugging", "visualization"]
categories = ["development-tools::debugging"]

[lib]
name = "sacp_trace_viewer"
path = "src/lib.rs"

[[bin]]
name = "sacp-trace-viewer"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
open = "5"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http = { version = "0.6", features = ["fs"] }
