[package]
name = "yopo"
version = "1.0.0-alpha.8"
edition = "2024"
description = "YOPO (You Only Prompt Once) - A simple ACP client for one-shot prompts"
license = "MIT OR Apache-2.0"
repository = "https://github.com/symposium-dev/symposium-acp"

[dependencies]
sacp = { version = "1.0.0-alpha.7", path = "../sacp" }
sacp-tokio = { version = "1.0.0-alpha.8", path = "../sacp-tokio" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
