[package]
name = "yopo"
version = "7.0.1"
edition = "2024"
description = "YOPO (You Only Prompt Once) - A simple ACP client for one-shot prompts"
license = "MIT OR Apache-2.0"
repository = "https://github.com/symposium-dev/symposium-acp"

[lib]
path = "src/lib.rs"

[[bin]]
name = "yopo"
path = "src/main.rs"

[dependencies]
sacp = { version = "7.0.1", path = "../sacp" }
sacp-tokio = { version = "7.0.1", path = "../sacp-tokio" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
